# portkey-python-sdk

./: .env.test.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  claude.md  pyproject.toml  setup.cfg  vendorize.toml
.changes/: v0.1.0.md
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  config.yml
.github/workflows/: ci.yml  python-publish.yml  verify-conventional-commits.yml
examples/: adk_streaming_thinking_usage.py  azure_fallback_loadbalance.ipynb  completions.ipynb  demo.py  fallback.ipynb  fallback_loadbalance.ipynb  hello_world_portkey_adk.py  hello_world_portkey_strands.py  loadbalance_two_api_keys.ipynb  notgiven_serialization_example.py  portkey.ipynb  portkey_single-mode.ipynb
portkey/: __init__.py  _portkey_scripts.py  version.py
portkey/api_resources/: __init__.py  apis.py  base_client.py  client.py  common_types.py  global_constants.py  streaming.py  utils.py
portkey/api_resources/apis/: __init__.py  api_resource.py  chat_complete.py  complete.py  create_headers.py  embeddings.py  feedback.py  generation.py  post.py
portkey/llms/langchain/: chat.py  completion.py
portkey/llms/llama_index/: __init__.py  completions.py  utils.py
portkey/tracer/: __init__.py  config.yaml  tracer.py  tracer_config.py
portkey/tracer/handlers/: __init__.py  client_handler.py  session_handler.py  utils.py
portkey_ai/: __init__.py  _portkey_scripts.py  version.py
portkey_ai/_vendor/openai/: __init__.py  _base_client.py  _client.py  _compat.py  _constants.py  _exceptions.py  _files.py  _legacy_response.py  _models.py  _response.py  _streaming.py  _types.py
portkey_ai/_vendor/openai-1.107.2.dist-info/: METADATA  RECORD
portkey_ai/_vendor/openai-1.26.0.dist-info/: RECORD
portkey_ai/_vendor/openai-1.40.1.dist-info/: METADATA  RECORD
portkey_ai/_vendor/openai-1.58.1.dist-info/: METADATA  RECORD
portkey_ai/_vendor/openai-1.63.2.dist-info/: METADATA  RECORD
portkey_ai/_vendor/openai-1.69.0.dist-info/: METADATA  RECORD
portkey_ai/_vendor/openai-1.74.0.dist-info/: METADATA  RECORD
portkey_ai/_vendor/openai-1.78.0.dist-info/: METADATA  RECORD
portkey_ai/_vendor/openai-1.86.0.dist-info/: METADATA  RECORD
portkey_ai/_vendor/openai-1.99.6.dist-info/: METADATA  RECORD
portkey_ai/_vendor/openai-2.16.0.dist-info/: RECORD
portkey_ai/_vendor/openai-2.2.0.dist-info/: METADATA  RECORD
portkey_ai/_vendor/openai-2.30.0.dist-info/: METADATA  RECORD
portkey_ai/_vendor/openai-2.7.1.dist-info/: METADATA  RECORD
portkey_ai/api_resources/: __init__.py  base_client.py  client.py  common_types.py  get_audio_duration.py  global_constants.py  streaming.py  utils.py
portkey_ai/api_resources/apis/: __init__.py  admin.py  analytics.py  api_keys.py  api_resource.py  assistants.py  audio.py  batches.py  beta_chat.py  beta_realtime.py  chat_complete.py  chatkit.py  collections.py  complete.py  configs.py  containers.py  conversations.py  create_headers.py  deleteMethod.py  embeddings.py  evals.py  feedback.py  fine_tuning.py  (+27 more)
portkey_ai/instrumentation/: PortkeyBaseInstrumentor.py  __init__.py  decorator.py  portkey_span_exporter.py  utils.py
portkey_ai/integrations/: __init__.py  adk.py  strands.py
portkey_ai/langchain/: __init__.py  portkey_langchain_callback_handler.py
portkey_ai/llamaindex/: __init__.py  portkey_llama_callback_handler.py
portkey_ai/utils/: __init__.py  hashing_utils.py  json_utils.py
rubeus/: __init__.py  _rubeus_scripts.py  version.py
rubeus/api_resources/: __init__.py  apis.py  base_client.py  client.py  global_constants.py  streaming.py  utils.py
src/rubeus/: __init__.py  apis.py  base_client.py  client.py  utils.py
tests/: manual_test_async_feedback.py  manual_test_async_thread_query.py  manual_test_batches.py  manual_test_feedback.py  manual_test_threads_query.py  models.json  test_anthropic.py  test_assistants.py  test_async_audio_speech.py  test_async_audio_transcript.py  test_async_audio_translation.py  test_async_chat_complete.py  test_async_complete.py  test_async_images.py  test_async_moderations.py  test_audio_speech.py  test_audio_transcript.py  test_audio_translation.py  test_azure_openai.py  test_chat_complete.py  test_cohere.py  test_complete.py  test_images.py  test_llm_langchain.py  test_llm_llamaindex.py  test_moderations.py  test_notgiven_serialization.py  test_openai.py  test_threads.py  utils.py  virtual_keys_replacement.sh
tests/anyscale_tests/: test_anyscale_CodeLlama-34b-Instruct-hf.py  test_anyscale_Llama-2-13b-chat-hf.py  test_anyscale_Llama-2-70b-chat-hf.py  test_anyscale_Llama-2-7b-chat-hf.py
tests/integrations/: test_adk_adapter.py
(+200 files in other folders)
