[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
exclude = 'portkey_ai/_vendor'
ignore_missing_imports = true
follow_imports = "silent"
disable_error_code = ['import-untyped', 'import-not-found']

[[tool.mypy.overrides]]
module = 'portkey_ai._vendor.*'
ignore_errors = true

[tool.black]
force-exclude = '''(portkey_ai/_vendor)/'''

[tool.ruff]
exclude =  ["portkey_ai/_vendor"]