[metadata]
name = rubeus
version = attr: rubeus.version.VERSION
description = Python client library for the Rubeus API
long_description = file: README.md
long_description_content_type = text/markdown
author = Portkey.ai
author_email = support@portkey.ai
url = https://github.com/Portkey-AI/rubeus-python-sdk
license_files = LICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
zip_safe = True
include_package_data = True
install_requires =
  httpx
  mypy==0.991
  black==23.7.0
  typing_extensions==4.7.1
  pydantic==1.10.12

[options.entry_points]
console_scripts =
  rubeus = rubeus._rubeus_scripts:main

[options.package_data]
  rubeus = py.typed

[options.extras_require]
dev =
  mypy==0.991
  black==23.7.0
  typing_extensions==4.7.1
  pydantic==1.10.12

[options.packages.find]
exclude =
  tests
  tests.*