[metadata]
name = portkey-ai
version = attr: portkey.version.VERSION
description = Python client library for the Portkey API
long_description = file: README.md
long_description_content_type = text/markdown
author = Portkey.ai
author_email = support@portkey.ai
url = https://github.com/Portkey-AI/portkey-python-sdk
license_files = LICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
zip_safe = True
include_package_data = True
install_requires =
  httpx
  mypy==0.991
  black==23.7.0
  typing_extensions==4.7.1
  pydantic==1.10.12

[options.entry_points]
console_scripts =
  portkey = portkey._portkey_scripts:main

[options.package_data]
  portkey = py.typed

[options.extras_require]
dev =
  mypy==0.991
  black==23.7.0
  typing_extensions==4.7.1
  pydantic==1.10.12
  pytest==7.4.2
  python-dotenv==1.0.0
  ruff==0.0.292

[options.packages.find]
exclude =
  tests/
  tests.*