[metadata]
name = portkey-ai
version = attr: portkey_ai.version.VERSION
description = Python client library for the Portkey API
long_description = file: README.md
long_description_content_type = text/markdown
author = Portkey.ai
author_email = support@portkey.ai
url = https://github.com/Portkey-AI/portkey-python-sdk
license_files = LICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
zip_safe = True
include_package_data = True
install_requires =
  httpx
  mypy>=0.991,<2.0
  typing_extensions>=4.7.1,<5.0
  pydantic>=1.10.0
  anyio>=3.5.0,<5
  distro>=1.7.0,<2
  sniffio
  cached-property
  tqdm>4
  types-requests
  jiter<1,>=0.4.0

[options.entry_points]
console_scripts =
  portkey_ai = portkey_ai._portkey_scripts:main

[options.package_data]
  portkey_ai = 
    py.typed
    _vendor/openai/lib/*
    _vendor/openai/lib/streaming/*

[options.extras_require]
dev =
  mypy>=0.991,<2.0
  black==23.7.0
  typing_extensions>=4.7.1,<5.0
  pydantic>=1.10.0
  pytest==7.4.2
  python-dotenv==1.0.0
  ruff==0.0.292
  pytest-asyncio==0.23.5
langchain_callback =
  langchain-core
llama_index_callback =
  llama-index

[mypy]
ignore_missing_imports = true
files = portkey_ai
exclude = portkey_ai/_vendor/*

[options.packages.find]
exclude =
  tests/
  tests.*